--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
     <link href="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.css" rel="stylesheet"
           type="text/css">
-    <link href="bower_components/angular-gantt/assets/gantt.css" rel="stylesheet" type="text/css">
+    <!--<link href="bower_components/angular-gantt/assets/gantt.css" rel="stylesheet" type="text/css">-->
     <link href="bower_components/angular-bootstrap-datetimepicker/src/css/datetimepicker.css" rel="stylesheet"
           type="text/css">
 
@@ -76,7 +76,7 @@
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js"></script>
 <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
-<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>
+<!--<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>-->
 <!-- Add New Bower Component JS Above -->
 
 <!-- Main App JS -->
@@ -91,9 +91,10 @@
 <script src="app/operator-control/operator-control.js"></script>
 <script src="app/util/focus-directive.js"></script>
 <script src="app/util/editable-directive.js"></script>
+<script src="app/services/control-service.js"></script>
 <script src="app/services/data-service.js"></script>
 <script src="app/services/monitor-service.js"></script>
-<script src="app/services/control-service.js"></script>
+<script src="app/services/observation-schedule-service.js"></script>
 <script src="app/services/receptor-state-service.js"></script>
 <script src="app/health/health.js"></script>
 <script src="app/auth/session-service.js"></script>
@@ -111,7 +112,7 @@
 <script src="app/widgets/dashboard-structures.js"></script>
 <script src="app/scheduler/scheduler.js"></script>
 <script src="app/scheduler/scheduler-home.js"></script>
-<script src="app/widgets/gantt/gantt-widget.js"></script>
+<!--<script src="app/widgets/gantt/gantt-widget.js"></script>-->
 <!-- Add New Component JS Above -->
 
 <!--<section >-->
