--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </md-sidenav>
 
     <div layout="column" flex>
-        <md-toolbar ng-show="vm.showNavbar" class="slide-in-vertically md-whiteframe-z1" md-theme-watch="true">
+        <md-toolbar ng-show="vm.showNavbar" class="slide-in-vertically-navbar md-whiteframe-z1" md-theme-watch="true">
             <div class="md-toolbar-tools" layout="row" style="margin-top: -4px; padding: 0;">
 
                 <md-button aria-label="Left Navbar" class="button-toolbar-flat-icon"
