--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 <script src="bower_components/ngstorage/ngStorage.js"></script>
 <script src="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js"></script>
 <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
+<script src="bower_components/jsjws/jws-3.0.js"></script>
+<script src="bower_components/jsjws/ext/json-sans-eval-min.js"></script>
+<script src="bower_components/jsrsasign/jsrsasign-4.7.0-all-min.js"></script>
 <!--<script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>-->
 <!-- Add New Bower Component JS Above -->
 
@@ -96,6 +99,8 @@
 <script src="app/services/monitor-service.js"></script>
 <script src="app/services/observation-schedule-service.js"></script>
 <script src="app/services/receptor-state-service.js"></script>
+<script src="app/services/user-service.js"></script>
+<script src="app/services/session-service.js"></script>
 <script src="app/health/health.js"></script>
 <script src="app/auth/session-service.js"></script>
 <script src="app/sensor-graph/sensor-graph.js"></script>
@@ -105,7 +110,6 @@
 <script src="app/d3/d3-service.js"></script>
 <script src="app/admin/admin.js"></script>
 <script src="app/util/util.js"></script>
-<script src="app/util/sha256.js"></script>
 <script src="app/alarms/alarms.js"></script>
 <script src="app/alarms/alarms-notify.js"></script>
 <script src="app/widgets/navigation/navigation-widget.js"></script>
